# CYGNUS-K

./: .gitignore  EnergywithPerformance.py  README.md  cevns.py  cevns_pipeline.py  detector_geometry.json  detector_model.py  downladFluxes.py  downloadFluxes.py  gasTargetRates.py  generate_sn_fluence.py  plotFluxes.py  recoNuEnergyComparison.py  reco_response_config.json  scatteringPlots.py  supernovaDistanceGasScan.py  supernovaGasTargetEvents.py  supernovaRecoNuEnergyComparison.py
DetectorNumbers/: computeDiffusion.py  computePlotRanges.py
FeasiblityPaper/: biblio.bib  main.tex
GarfieldSim/: CMakeLists.txt  generate.C  generate_impurity.C  read.C  read.py
